# Video-Game-Heart-Rate-Sensor

./: .gitignore  README.md
Desktop Application/: CMakeLists.txt  GUI.cpp  GUI.h  IP.cpp  IP.h  imgui.ini  main.cpp  server.cpp  server.h  vcpkg.json
Wearable/: .project  VideoGameHRMSender.wgt  config.xml  index.html
Wearable/.sign/: .manifest.tmp  author-signature.xml  signature1.xml
Wearable/js/: main.js
